@@ -1,12 +1,7 @@
-#!/bin/sh
-#
-echo "Generating build information using aclocal, automake and autoconf"
-echo "This may take a while ..."
-
+#! /bin/sh
+set -e
 aclocal
 autoheader
-libtoolize  --copy  --force
-automake  --add-missing
+libtoolize --copy --force
+automake --add-missing
 autoconf
-
-echo "Now you are ready to run ./configure"
